Tested with more items, looks like we have something with KNN and Trees

--- a/classifier_test04.ipynb
+++ b/classifier_test04.ipynb
@@ -557,9 +557,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>ACC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>0.428241</td>\n",
+       "      <td>0.678241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>0.787037</td>\n",
+       "      <td>0.428241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tree Classifier</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>0.967593</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             model       MAE       ACC\n",
+       "0              KNN  0.428241  0.678241\n",
+       "1              SVM  0.787037  0.428241\n",
+       "2  Tree Classifier  0.037037  0.967593"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classes = ['extension', 'rest', 'flexion']\n",
     "\n",
@@ -572,18 +633,470 @@
     "\n",
     "new_rest_bases = []\n",
     "new_extension_bases = []\n",
+    "new_flexion_bases = []\n",
     "for i in train_cols:\n",
     "    rest_removed = remove_outliers(rest_base, i)\n",
     "    new_rest_bases.append(rest_removed)\n",
     "\n",
     "    extension_removed = remove_outliers(extension_base, i)\n",
     "    new_extension_bases.append(extension_removed)\n",
-    "    extension_removed = remove_outliers(extension_base, i)\n",
-    "    new_extension_bases.append(extension_removed)\n",
+    "\n",
+    "    flexion_removed = remove_outliers(flexion_base, i)\n",
+    "    new_flexion_bases.append(flexion_removed)\n",
     "\n",
     "\n",
     "\n",
-    "cleased_base = pd.concat([*new_rest_bases, *new_extension_bases])\n",
+    "cleased_base = pd.concat([*new_rest_bases, *new_extension_bases, *new_flexion_bases])\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "get_score_and_accuracy(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>ACC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>1.833218</td>\n",
+       "      <td>0.507236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>2.696761</td>\n",
+       "      <td>0.137147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tree Classifier</td>\n",
+       "      <td>0.092350</td>\n",
+       "      <td>0.976568</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             model       MAE       ACC\n",
+       "0              KNN  1.833218  0.507236\n",
+       "1              SVM  2.696761  0.137147\n",
+       "2  Tree Classifier  0.092350  0.976568"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes = base['class'].unique()\n",
+    "# classes = ['extension', 'rest', 'flexion']\n",
+    "\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_RMS', 'SENSOR1_RMS', 'SENSOR2_RMS', 'SENSOR3_RMS']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "get_score_and_accuracy(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>ACC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>1.555273</td>\n",
+       "      <td>0.567980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>3.138501</td>\n",
+       "      <td>0.162643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tree Classifier</td>\n",
+       "      <td>0.028590</td>\n",
+       "      <td>0.993011</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             model       MAE       ACC\n",
+       "0              KNN  1.555273  0.567980\n",
+       "1              SVM  3.138501  0.162643\n",
+       "2  Tree Classifier  0.028590  0.993011"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes = base['class'].unique()\n",
+    "# classes = ['extension', 'rest', 'flexion']\n",
+    "\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_APPEN', 'SENSOR1_APPEN', 'SENSOR2_APPEN', 'SENSOR3_APPEN']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "get_score_and_accuracy(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>ACC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>1.452471</td>\n",
+       "      <td>0.598226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>3.202155</td>\n",
+       "      <td>0.152725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tree Classifier</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             model       MAE       ACC\n",
+       "0              KNN  1.452471  0.598226\n",
+       "1              SVM  3.202155  0.152725\n",
+       "2  Tree Classifier  0.000000  1.000000"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes = base['class'].unique()\n",
+    "# classes = ['extension', 'rest', 'flexion']\n",
+    "\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_SAMPEN', 'SENSOR1_SAMPEN', 'SENSOR2_SAMPEN', 'SENSOR3_SAMPEN']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "get_score_and_accuracy(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>ACC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>1.695442</td>\n",
+       "      <td>0.517956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>2.994475</td>\n",
+       "      <td>0.136740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tree Classifier</td>\n",
+       "      <td>0.078729</td>\n",
+       "      <td>0.983425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             model       MAE       ACC\n",
+       "0              KNN  1.695442  0.517956\n",
+       "1              SVM  2.994475  0.136740\n",
+       "2  Tree Classifier  0.078729  0.983425"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes = base['class'].unique()\n",
+    "# classes = ['extension', 'rest', 'flexion']\n",
+    "\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_MAV', 'SENSOR1_MAV', 'SENSOR2_MAV', 'SENSOR3_MAV']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "get_score_and_accuracy(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>ACC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>1.750520</td>\n",
+       "      <td>0.535690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>2.950797</td>\n",
+       "      <td>0.137214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tree Classifier</td>\n",
+       "      <td>0.070686</td>\n",
+       "      <td>0.978517</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             model       MAE       ACC\n",
+       "0              KNN  1.750520  0.535690\n",
+       "1              SVM  2.950797  0.137214\n",
+       "2  Tree Classifier  0.070686  0.978517"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes = base['class'].unique()\n",
+    "# classes = ['extension', 'rest', 'flexion']\n",
+    "\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_WAVELEN', 'SENSOR1_WAVELEN', 'SENSOR2_WAVELEN', 'SENSOR3_WAVELEN']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
     "\n",
     "X = cleased_base[train_cols]\n",
     "Y = cleased_base[target_cols]\n",
