--- a/classifier_test04.ipynb
+++ b/classifier_test04.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import mean_absolute_error, accuracy_score\n",
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,8 +348,17 @@
     "    dr_tree['MAE'] = mean_absolute_error(Y_test, preds_valid)\n",
     "    dr_tree['ACC'] = accuracy_score(Y_test, preds_valid)\n",
     "\n",
+    "    model = RandomForestClassifier()\n",
+    "    model.fit(X_train, Y_train)\n",
     "\n",
-    "    return pd.DataFrame([dr, dr_svm, dr_tree])"
+    "    preds_valid = model.predict(X_test)\n",
+    "\n",
+    "    dr_random = {} \n",
+    "    dr_random['model'] = 'Random Forest'\n",
+    "    dr_random['MAE'] = mean_absolute_error(Y_test, preds_valid)\n",
+    "    dr_random['ACC'] = accuracy_score(Y_test, preds_valid)\n",
+    "\n",
+    "    return pd.DataFrame([dr, dr_svm, dr_tree, dr_random])"
    ]
   },
   {
@@ -1016,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1049,20 +1059,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>1.750520</td>\n",
-       "      <td>0.535690</td>\n",
+       "      <td>1.757450</td>\n",
+       "      <td>0.516979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>2.950797</td>\n",
-       "      <td>0.137214</td>\n",
+       "      <td>3.106029</td>\n",
+       "      <td>0.139986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tree Classifier</td>\n",
-       "      <td>0.070686</td>\n",
-       "      <td>0.978517</td>\n",
+       "      <td>0.100485</td>\n",
+       "      <td>0.974359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.097020</td>\n",
+       "      <td>0.975052</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1070,12 +1086,13 @@
       ],
       "text/plain": [
        "             model       MAE       ACC\n",
-       "0              KNN  1.750520  0.535690\n",
-       "1              SVM  2.950797  0.137214\n",
-       "2  Tree Classifier  0.070686  0.978517"
+       "0              KNN  1.757450  0.516979\n",
+       "1              SVM  3.106029  0.139986\n",
+       "2  Tree Classifier  0.100485  0.974359\n",
+       "3    Random Forest  0.097020  0.975052"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
