tested a lot of things

--- a/classifier_test06.ipynb
+++ b/classifier_test06.ipynb
@@ -366,26 +366,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>2.200092</td>\n",
-       "      <td>0.421853</td>\n",
+       "      <td>2.157676</td>\n",
+       "      <td>0.438912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>3.118027</td>\n",
-       "      <td>0.130475</td>\n",
+       "      <td>2.980636</td>\n",
+       "      <td>0.128631</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tree Classifier</td>\n",
-       "      <td>0.155371</td>\n",
-       "      <td>0.959428</td>\n",
+       "      <td>0.130936</td>\n",
+       "      <td>0.962656</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.137852</td>\n",
-       "      <td>0.960811</td>\n",
+       "      <td>0.116644</td>\n",
+       "      <td>0.965883</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -393,10 +393,10 @@
       ],
       "text/plain": [
        "             model       MAE       ACC\n",
-       "0              KNN  2.200092  0.421853\n",
-       "1              SVM  3.118027  0.130475\n",
-       "2  Tree Classifier  0.155371  0.959428\n",
-       "3    Random Forest  0.137852  0.960811"
+       "0              KNN  2.157676  0.438912\n",
+       "1              SVM  2.980636  0.128631\n",
+       "2  Tree Classifier  0.130936  0.962656\n",
+       "3    Random Forest  0.116644  0.965883"
       ]
      },
      "execution_count": 5,
@@ -491,14 +491,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.135993</td>\n",
-       "      <td>0.960767</td>\n",
+       "      <td>0.158695</td>\n",
+       "      <td>0.953714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>3.169716</td>\n",
-       "      <td>0.142826</td>\n",
+       "      <td>3.303505</td>\n",
+       "      <td>0.141944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -518,8 +518,8 @@
       ],
       "text/plain": [
        "             model       MAE       ACC\n",
-       "0              KNN  0.135993  0.960767\n",
-       "1              SVM  3.169716  0.142826\n",
+       "0              KNN  0.158695  0.953714\n",
+       "1              SVM  3.303505  0.141944\n",
        "2  Tree Classifier  0.000000  1.000000\n",
        "3    Random Forest  0.000000  1.000000"
       ]
@@ -617,26 +617,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.233164</td>\n",
-       "      <td>0.937269</td>\n",
+       "      <td>0.225323</td>\n",
+       "      <td>0.940268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>3.095941</td>\n",
-       "      <td>0.135378</td>\n",
+       "      <td>2.663515</td>\n",
+       "      <td>0.128690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tree Classifier</td>\n",
-       "      <td>0.003229</td>\n",
-       "      <td>0.999077</td>\n",
+       "      <td>0.010609</td>\n",
+       "      <td>0.997002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.003229</td>\n",
-       "      <td>0.999077</td>\n",
+       "      <td>0.013838</td>\n",
+       "      <td>0.996541</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -644,10 +644,10 @@
       ],
       "text/plain": [
        "             model       MAE       ACC\n",
-       "0              KNN  0.233164  0.937269\n",
-       "1              SVM  3.095941  0.135378\n",
-       "2  Tree Classifier  0.003229  0.999077\n",
-       "3    Random Forest  0.003229  0.999077"
+       "0              KNN  0.225323  0.940268\n",
+       "1              SVM  2.663515  0.128690\n",
+       "2  Tree Classifier  0.010609  0.997002\n",
+       "3    Random Forest  0.013838  0.996541"
       ]
      },
      "execution_count": 9,
@@ -714,26 +714,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.234195</td>\n",
-       "      <td>0.939548</td>\n",
+       "      <td>0.205122</td>\n",
+       "      <td>0.945316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>2.946701</td>\n",
-       "      <td>0.148362</td>\n",
+       "      <td>3.037148</td>\n",
+       "      <td>0.144670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tree Classifier</td>\n",
-       "      <td>0.019843</td>\n",
-       "      <td>0.994001</td>\n",
+       "      <td>0.013383</td>\n",
+       "      <td>0.996539</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.018920</td>\n",
-       "      <td>0.994462</td>\n",
+       "      <td>0.014536</td>\n",
+       "      <td>0.996539</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -741,10 +741,10 @@
       ],
       "text/plain": [
        "             model       MAE       ACC\n",
-       "0              KNN  0.234195  0.939548\n",
-       "1              SVM  2.946701  0.148362\n",
-       "2  Tree Classifier  0.019843  0.994001\n",
-       "3    Random Forest  0.018920  0.994462"
+       "0              KNN  0.205122  0.945316\n",
+       "1              SVM  3.037148  0.144670\n",
+       "2  Tree Classifier  0.013383  0.996539\n",
+       "3    Random Forest  0.014536  0.996539"
       ]
      },
      "execution_count": 10,
@@ -811,26 +811,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.207394</td>\n",
-       "      <td>0.949955</td>\n",
+       "      <td>0.288999</td>\n",
+       "      <td>0.928765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>2.949729</td>\n",
-       "      <td>0.146078</td>\n",
+       "      <td>2.972949</td>\n",
+       "      <td>0.148783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tree Classifier</td>\n",
-       "      <td>0.003832</td>\n",
-       "      <td>0.997520</td>\n",
+       "      <td>0.014878</td>\n",
+       "      <td>0.996619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.011271</td>\n",
-       "      <td>0.997520</td>\n",
+       "      <td>0.011948</td>\n",
+       "      <td>0.996619</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -838,10 +838,10 @@
       ],
       "text/plain": [
        "             model       MAE       ACC\n",
-       "0              KNN  0.207394  0.949955\n",
-       "1              SVM  2.949729  0.146078\n",
-       "2  Tree Classifier  0.003832  0.997520\n",
-       "3    Random Forest  0.011271  0.997520"
+       "0              KNN  0.288999  0.928765\n",
+       "1              SVM  2.972949  0.148783\n",
+       "2  Tree Classifier  0.014878  0.996619\n",
+       "3    Random Forest  0.011948  0.996619"
       ]
      },
      "execution_count": 11,
@@ -871,6 +871,210 @@
     "Y = cleased_base[target_cols]\n",
     "\n",
     "get_score_and_accuracy(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing with cross validation to see if data is not skewed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.99695637, 1.        , 0.98241461, 0.99256003, 0.99898546]),\n",
+       " array([1., 1., 1., 1., 1.]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# RMS + WAMP\n",
+    "labels = base['class'].unique()\n",
+    "classes = labels\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_RMS', 'SENSOR1_RMS', 'SENSOR2_RMS', 'SENSOR3_RMS', 'SENSOR0_WAMP', 'SENSOR1_WAMP', 'SENSOR2_WAMP', 'SENSOR3_WAMP']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "cross_val_score(KNeighborsClassifier(), X, Y, cv=5), cross_val_score(RandomForestClassifier(), X, Y, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1.        , 1.        , 1.        , 0.99669312, 0.99933862]),\n",
+       " array([1., 1., 1., 1., 1.]))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# RMS + APPEN\n",
+    "labels = base['class'].unique()\n",
+    "classes = labels\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_RMS', 'SENSOR1_RMS', 'SENSOR2_RMS', 'SENSOR3_RMS', 'SENSOR0_APPEN', 'SENSOR1_APPEN', 'SENSOR2_APPEN', 'SENSOR3_APPEN']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "cross_val_score(KNeighborsClassifier(), X, Y, cv=5), cross_val_score(RandomForestClassifier(), X, Y, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing Confusin Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score_and_accuracy_with_cfmx(X, Y, labels=None):\n",
+    "    cfmx_dict = {}\n",
+    "    X_train,X_test,Y_train,Y_test=train_test_split(X,Y,train_size=0.8,test_size=0.2)\n",
+    "\n",
+    "    encoder = LabelEncoder()\n",
+    "\n",
+    "    Y_train = encoder.fit_transform(Y_train)\n",
+    "    Y_test = encoder.transform(Y_test)\n",
+    "\n",
+    "    model = KNeighborsClassifier()\n",
+    "    model.fit(X_train, Y_train)\n",
+    "    preds_valid = model.predict(X_test)\n",
+    "\n",
+    "    dr = {} \n",
+    "    dr['model'] = 'KNN'\n",
+    "    dr['MAE'] = mean_absolute_error(Y_test, preds_valid)\n",
+    "    dr['ACC'] = accuracy_score(Y_test, preds_valid)\n",
+    "\n",
+    "    y_true = encoder.inverse_transform(Y_test)\n",
+    "    y_pred = encoder.inverse_transform(preds_valid)\n",
+    "    cfmx_dict['KNN'] = confusion_matrix(y_true, y_pred, labels=labels)\n",
+    "\n",
+    "\n",
+    "    model = SVC()\n",
+    "    model.fit(X_train, Y_train)\n",
+    "    preds_valid = model.predict(X_test)\n",
+    "\n",
+    "    dr_svm = {} \n",
+    "    dr_svm['model'] = 'SVM'\n",
+    "    dr_svm['MAE'] = mean_absolute_error(Y_test, preds_valid)\n",
+    "    dr_svm['ACC'] = accuracy_score(Y_test, preds_valid)\n",
+    "\n",
+    "    y_true = encoder.inverse_transform(Y_test)\n",
+    "    y_pred = encoder.inverse_transform(preds_valid)\n",
+    "    cfmx_dict['SVM'] = confusion_matrix(y_true, y_pred, labels=labels)\n",
+    "\n",
+    "    model = DecisionTreeClassifier()\n",
+    "    model.fit(X_train, Y_train)\n",
+    "\n",
+    "    preds_valid = model.predict(X_test)\n",
+    "\n",
+    "    dr_tree = {} \n",
+    "    dr_tree['model'] = 'Tree Classifier'\n",
+    "    dr_tree['MAE'] = mean_absolute_error(Y_test, preds_valid)\n",
+    "    dr_tree['ACC'] = accuracy_score(Y_test, preds_valid)\n",
+    "\n",
+    "    y_true = encoder.inverse_transform(Y_test)\n",
+    "    y_pred = encoder.inverse_transform(preds_valid)\n",
+    "    cfmx_dict['Tree Classifier'] = confusion_matrix(y_true, y_pred, labels=labels)\n",
+    "\n",
+    "    model = RandomForestClassifier()\n",
+    "    model.fit(X_train, Y_train)\n",
+    "\n",
+    "    preds_valid = model.predict(X_test)\n",
+    "\n",
+    "    dr_random = {} \n",
+    "    dr_random['model'] = 'Random Forest'\n",
+    "    dr_random['MAE'] = mean_absolute_error(Y_test, preds_valid)\n",
+    "    dr_random['ACC'] = accuracy_score(Y_test, preds_valid)\n",
+    "\n",
+    "    y_true = encoder.inverse_transform(Y_test)\n",
+    "    y_pred = encoder.inverse_transform(preds_valid)\n",
+    "    cfmx_dict['Random Forest'] = confusion_matrix(y_true, y_pred, labels=labels)\n",
+    "\n",
+    "    return pd.DataFrame([dr, dr_svm, dr_tree, dr_random]), cfmx_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RMS + APPEN\n",
+    "labels = base['class'].unique()\n",
+    "classes = labels\n",
+    "\n",
+    "target_cols = 'class'\n",
+    "train_cols = ['SENSOR0_RMS', 'SENSOR1_RMS', 'SENSOR2_RMS', 'SENSOR3_RMS', 'SENSOR0_APPEN', 'SENSOR1_APPEN', 'SENSOR2_APPEN', 'SENSOR3_APPEN']\n",
+    "\n",
+    "\n",
+    "new_bases = []\n",
+    "for i in classes:\n",
+    "    curr_base = base.loc[base['class'] == i]\n",
+    "    for col in train_cols:\n",
+    "        no_out = remove_outliers(curr_base, col)\n",
+    "        new_bases.append(no_out)\n",
+    "\n",
+    "cleased_base = pd.concat(new_bases)\n",
+    "\n",
+    "X = cleased_base[train_cols]\n",
+    "Y = cleased_base[target_cols]\n",
+    "\n",
+    "result, cfmx = get_score_and_accuracy_with_cfmx(X, Y)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(1,1,1)\n",
+    "ax.set_title(\"KNN - Confusion Matrix\")\n",
+    "\n",
+    "ConfusionMatrixDisplay(cfmx['KNN'], display_labels=labels).plot(ax=ax)"
    ]
   }
  ],
